컨트롤러 슬라이스 테스트 작성 및 ExceptionHandler 추가 및 컨트롤러, DTO 리팩토링 및 커스텀 예외 추가